# zepp-life-mcp

./: .env.example  README.md  dump_samples.py  fix_server.py  parse_har.py  patch_cloud_session.py  patch_export.py  patch_readme.py  patch_server.py  patch_storage.py  patch_sync.py  pyproject.toml  query_db.py
src/zepp_life_mcp/: server.py
src/zepp_life_mcp/adapters/: base.py  cloud_session.py  export_file.py
src/zepp_life_mcp/models/: __init__.py
src/zepp_life_mcp/services/: query_service.py  sync_service.py
src/zepp_life_mcp/storage/: __init__.py
